# ne697-Geant4

./: .gitignore
assignment2/: CMakeLists.txt  assign2.cpp
assignment3/: CMakeLists.txt
assignment3/include/: argparser.hpp  hit.hpp  runmanager.hpp
assignment3/python/: hits_run1.csv  hits_run2.csv  hits_run3.csv  mc1d.py
assignment3/src/: argparser.cpp  hit.cpp  main.cpp  runmanager.cpp
assignment4/: CMakeLists.txt
assignment4/include/: argparser.hpp  hit.hpp  particle.hpp  runmanager.hpp
assignment4/src/: argparser.cpp  hit.cpp  main.cpp  particle.cpp  runmanager.cpp
assignment5/: answers.txt
assignment5/B1/: CMakeLists.txt  part2.mac  part3.mac
assignment5/B1/src/: B1DetectorConstruction.cc  B1RunAction.cc
assignment5/B3b/: CMakeLists.txt
assignment5/B3b/src/: B3DetectorConstruction.cc
assignment5/OpNovice/: part1.mac
assignment5/OpNovice/src/: OpNoviceDetectorConstruction.cc
assignment6/g4-ne697/scripts/: run1.mac  run2.mac  run5.mac
assignment6/g4-ne697/src/: detectorconstruction.cpp  pga.cpp
assignment7/g4-ne697/include/: detectorconstruction.hpp  geometrymessenger.hpp  gunmessenger.hpp  materialmessenger.hpp  pga.hpp
assignment7/g4-ne697/scripts/: run1.mac  run2.mac  run3.mac  run4.mac  run5.mac  run6.mac
assignment7/g4-ne697/src/: detectorconstruction.cpp  geometrymessenger.cpp  gunmessenger.cpp  pga.cpp  run.cpp  sensitivedetector.cpp
assignment7/images/: assignment7.py
final/g4-ne697/: CMakeLists.txt
final/g4-ne697/include/: detectorconstruction.hpp  geometrymessenger.hpp
final/g4-ne697/scripts/: run1.mac  run2.mac
(+6 files in other folders)
